[package]
name = "guess-the-webhook"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.20", features = ["blocking"] }
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "7f31a63a660e87a6f13ee2944aa9e8f3e4576e4f", default-features = false, features = ["rustls_backend", "model"] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
